Contacto-Extraterrstre-3d/src/main/java/antlr4/com/PigLatinParser.g4
grammar PigLatinParser;

import PigLatinLexer;

inicio: instrucciones? EOF
      ;

instrucciones: bloque_imports* bloque_vars* bloque_main FINISUP PUNTO_COMA
             ;

bloque_imports: IMPORT ID PUNTO ID PUNTO ID
              ;

bloque_vars: ESTO ID DOS_PUNTOS tipos expresion PUNTO_COMA
           // arrays
           | SERIES ID LCORCH expresion RCORCH DOS_PUNTOS tipos_varios LLLAVE bloque_varios RLLAVE PUNTO_COMA
           | SERIES ID LCORCH expresion RCORCH DOS_PUNTOS tipos_varios PUNTO_COMA
           // estructuras
           | ESTO ID DOS_PUNTOS ID LLLAVE bloque_varios RLLAVE PUNTO_COMA
           | SERIES ID LCORCH expresion RCORCH DOS_PUNTOS tipos_varios PUNTO_COMA
           //Objetos
           | ESTO ID DOS_PUNTOS NOVUS ID LPAREN bloque_objt RPAREN PUNTO_COMA
           | SERIES ID LCORCH expresion RCORCH DOS_PUNTOS ID PUNTO_COMA
           ;

tipos_varios: tipos
           | ID
           ;

bloque_varios: expresion (COMA expresion)*
             ;

bloque_objt: (expresion | NOVUS ID LPAREN bloque_objt RPAREN) (COMA (expresion | NOVUS ID LPAREN bloque_objt RPAREN))*
           ;


bloque_main: MAIOR instruccion*
           ;

instruccion: bloque_impr
           | bloque_leer
           | expresion
           | SI LPAREN expresion RPAREN LLLAVE instruccion* RLLAVE bloque_si* FINIS PUNTO_COMA
           | DUM LPAREN expresion RPAREN LLLAVE instruccion RLLAVE FINIS PUNTO_COMA
           | FACERE LLLAVE instruccion RLLAVE DUM LPAREN expresion RPAREN PUNTO_COMA
           | PER LPAREN ESTO ID DOS_PUNTOS tipos expresion PUNTO_COMA expresion PUNTO_COMA auto_cambio RPAREN LLLAVE instruccion RLLAVE
           | bloque_asignacion
           | PERGE
           | INTERRUMPE
           ;

bloque_si: ALITER (LPAREN expresion RPAREN)? LLLAVE instruccion* RLLAVE
         ;

        // >> <valor> ; | >> <valor>  ...  >> <valor> ;
bloque_impr: IMPRIMIR expresion (IMPRIMIR expresion)* PUNTO_COMA # Impresion_Consola
        ;

      // <id> << | <<
bloque_leer: ID? LEER # Lectura_Texto
        ;

bloque_asignacion: ID ASIGNACION expresion PUNTO_COMA
                 | ID LCORCH expresion RCORCH ASIGNACION expresion PUNTO_COMA
                 | ID PUNTO ID ASIGNACION expresion PUNTO_COMA
                 | ID LCORCH expresion RCORCH PUNTO ID ASIGNACION expresion PUNTO_COMA
                 | auto_cambio PUNTO_COMA
                 ;

auto_cambio: ID SUMA_INCR
           | ID RESTA_DECR
           ;

        // -<valor>
expresion: RESTA expresion # Umenos
        // non <valor>
         | NON expresion # Negacion
        // (...)
         | LPAREN expresion RPAREN # Parentesis
        // <valor> (* /) <valor>
         | expresion ops1=(MULTI | DIV) expresion # MultDiv
        // <valor> (+ -) <valor>
         | expresion ops1=(SUMA | RESTA) expresion # SumaResta
        // <valor> (== !=) <valor>
         | expresion ops1=(IGUAL | NO_IGUAL) expresion # IgualNoIgual
        // <valor> (<= >=) <valor>
         | expresion ops1=(MENRO_IGUAL | MAYOR_IGUAL) expresion # MenorMayorIgual
        // <valor> (< >) <valor>
         | expresion ops1=(MENOR | MAYOR) expresion # MenorMayor
        // <valor> (&& ||) <valor>
         | expresion ops1=(AND | OR) expresion # AndOr
       // <id>[<valor>]
         | ID LCORCH expresion RCORCH # Llamada_Elemento_Series
       // <id_structura>.<id_propiedad>
         | ID PUNTO ID # Llamada_Propiedad_Structura
         // <id> (...)
         | ID LPAREN (expresion (COMA expresion)* )* RPAREN # Llamada_Actio_Exp
        // <tipo> <id> (...)
         | tipos ID LPAREN (expresion (COMA expresion)* )* RPAREN # Llamada_Ratio_Tipo
       // <id>[<valor>].<id>
         | ID LCORCH expresion RCORCH PUNTO ID # Llamada_Series_Structura
         | VERUM # VerumValor
         | FALSUS # FalsusValor
         | ID # Identificador
         | DOUBLE # DoubleVal
         | INT # IntVal
         | CHARS # CharVal
         | STRING # StringVal
         ;

tipos: NUMERUS
     | TEXTUM
     | BOOL
     | DECIMALIS
     | LITTERA
     ;
