Contacto-Extraterrstre-3d/src/main/java/antlr4/com/antlr4/com/PigLatinParserParser.java
// Generated from /home/juanpa/Documentos/Contacto-Extraterrstre-3d/Contacto-Extraterrstre-3d/src/main/java/antlr4/com/PigLatinParser.g4 by ANTLR 4.13.2
package antlr4.com.antlr4.com;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PigLatinParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, VARIABILES=2, ESTO=3, BOOL=4, NUMERUS=5, TEXTUM=6, MAIOR=7, 
		FINISUP=8, DECIMALIS=9, LITTERA=10, SERIES=11, FALSUS=12, VERUM=13, NOVUS=14, 
		SI=15, FINIS=16, ALITER=17, DUM=18, FACERE=19, PER=20, NON=21, PERGE=22, 
		INTERRUMPE=23, IMPRIMIR=24, LEER=25, DOS_PUNTOS=26, LCORCH=27, RCORCH=28, 
		LLLAVE=29, RLLAVE=30, LPAREN=31, RPAREN=32, COMA=33, PUNTO=34, PUNTO_COMA=35, 
		SUMA_INCR=36, RESTA_DECR=37, SUMA=38, RESTA=39, MULTI=40, DIV=41, IGUAL=42, 
		NO_IGUAL=43, MENRO_IGUAL=44, MAYOR_IGUAL=45, MENOR=46, MAYOR=47, ASIGNACION=48, 
		AND=49, OR=50, ID=51, INT=52, DOUBLE=53, STRING=54, CHARS=55, ESC=56, 
		LINE_COMMENT=57, BLOCK_COMMENT=58, WS=59;
	public static final int
		RULE_inicio = 0, RULE_instrucciones = 1, RULE_bloque_imports = 2, RULE_vars_par = 3, 
		RULE_bloque_vars = 4, RULE_tipos_varios = 5, RULE_bloque_varios = 6, RULE_bloque_objt = 7, 
		RULE_bloque_main = 8, RULE_instruccion = 9, RULE_bloque_si = 10, RULE_bloque_impr = 11, 
		RULE_bloque_leer = 12, RULE_bloque_asignacion = 13, RULE_auto_cambio = 14, 
		RULE_expresion = 15, RULE_tipos = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "instrucciones", "bloque_imports", "vars_par", "bloque_vars", 
			"tipos_varios", "bloque_varios", "bloque_objt", "bloque_main", "instruccion", 
			"bloque_si", "bloque_impr", "bloque_leer", "bloque_asignacion", "auto_cambio", 
			"expresion", "tipos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'VARIABILES>'", "'esto'", "'bool'", "'numerus'", "'textum'", 
			"'MAIOR>'", "'FINIS'", "'decimalis'", "'littera'", "'series'", "'falsus'", 
			"'verum'", "'novus'", "'si'", "'finis'", "'aliter'", "'dum'", "'facere'", 
			"'per'", "'non'", "'perge'", "'interrumpe'", "'>>'", "'<<'", "':'", "'['", 
			"']'", "'{'", "'}'", "'('", "')'", "','", "'.'", "';'", "'++'", "'--'", 
			"'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
			"'='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "VARIABILES", "ESTO", "BOOL", "NUMERUS", "TEXTUM", "MAIOR", 
			"FINISUP", "DECIMALIS", "LITTERA", "SERIES", "FALSUS", "VERUM", "NOVUS", 
			"SI", "FINIS", "ALITER", "DUM", "FACERE", "PER", "NON", "PERGE", "INTERRUMPE", 
			"IMPRIMIR", "LEER", "DOS_PUNTOS", "LCORCH", "RCORCH", "LLLAVE", "RLLAVE", 
			"LPAREN", "RPAREN", "COMA", "PUNTO", "PUNTO_COMA", "SUMA_INCR", "RESTA_DECR", 
			"SUMA", "RESTA", "MULTI", "DIV", "IGUAL", "NO_IGUAL", "MENRO_IGUAL", 
			"MAYOR_IGUAL", "MENOR", "MAYOR", "ASIGNACION", "AND", "OR", "ID", "INT", 
			"DOUBLE", "STRING", "CHARS", "ESC", "LINE_COMMENT", "BLOCK_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PigLatinParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PigLatinParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PigLatinParserParser.EOF, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 134L) != 0)) {
				{
				setState(34);
				instrucciones();
				}
			}

			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public Bloque_mainContext bloque_main() {
			return getRuleContext(Bloque_mainContext.class,0);
		}
		public TerminalNode FINISUP() { return getToken(PigLatinParserParser.FINISUP, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(PigLatinParserParser.PUNTO_COMA, 0); }
		public List<Bloque_importsContext> bloque_imports() {
			return getRuleContexts(Bloque_importsContext.class);
		}
		public Bloque_importsContext bloque_imports(int i) {
			return getRuleContext(Bloque_importsContext.class,i);
		}
		public Vars_parContext vars_par() {
			return getRuleContext(Vars_parContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitInstrucciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(39);
				bloque_imports();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABILES) {
				{
				setState(45);
				vars_par();
				}
			}

			setState(48);
			bloque_main();
			setState(49);
			match(FINISUP);
			setState(50);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_importsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(PigLatinParserParser.IMPORT, 0); }
		public List<TerminalNode> ID() { return getTokens(PigLatinParserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PigLatinParserParser.ID, i);
		}
		public List<TerminalNode> PUNTO() { return getTokens(PigLatinParserParser.PUNTO); }
		public TerminalNode PUNTO(int i) {
			return getToken(PigLatinParserParser.PUNTO, i);
		}
		public Bloque_importsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterBloque_imports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitBloque_imports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitBloque_imports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_importsContext bloque_imports() throws RecognitionException {
		Bloque_importsContext _localctx = new Bloque_importsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloque_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(IMPORT);
			setState(53);
			match(ID);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUNTO) {
				{
				{
				setState(54);
				match(PUNTO);
				setState(55);
				match(ID);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Vars_parContext extends ParserRuleContext {
		public TerminalNode VARIABILES() { return getToken(PigLatinParserParser.VARIABILES, 0); }
		public List<Bloque_varsContext> bloque_vars() {
			return getRuleContexts(Bloque_varsContext.class);
		}
		public Bloque_varsContext bloque_vars(int i) {
			return getRuleContext(Bloque_varsContext.class,i);
		}
		public Vars_parContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars_par; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterVars_par(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitVars_par(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitVars_par(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Vars_parContext vars_par() throws RecognitionException {
		Vars_parContext _localctx = new Vars_parContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vars_par);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(VARIABILES);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESTO || _la==SERIES) {
				{
				{
				setState(62);
				bloque_vars();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_varsContext extends ParserRuleContext {
		public TerminalNode ESTO() { return getToken(PigLatinParserParser.ESTO, 0); }
		public List<TerminalNode> ID() { return getTokens(PigLatinParserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PigLatinParserParser.ID, i);
		}
		public TerminalNode DOS_PUNTOS() { return getToken(PigLatinParserParser.DOS_PUNTOS, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(PigLatinParserParser.PUNTO_COMA, 0); }
		public TerminalNode SERIES() { return getToken(PigLatinParserParser.SERIES, 0); }
		public TerminalNode LCORCH() { return getToken(PigLatinParserParser.LCORCH, 0); }
		public TerminalNode RCORCH() { return getToken(PigLatinParserParser.RCORCH, 0); }
		public Tipos_variosContext tipos_varios() {
			return getRuleContext(Tipos_variosContext.class,0);
		}
		public TerminalNode LLLAVE() { return getToken(PigLatinParserParser.LLLAVE, 0); }
		public Bloque_variosContext bloque_varios() {
			return getRuleContext(Bloque_variosContext.class,0);
		}
		public TerminalNode RLLAVE() { return getToken(PigLatinParserParser.RLLAVE, 0); }
		public TerminalNode NOVUS() { return getToken(PigLatinParserParser.NOVUS, 0); }
		public TerminalNode LPAREN() { return getToken(PigLatinParserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PigLatinParserParser.RPAREN, 0); }
		public Bloque_objtContext bloque_objt() {
			return getRuleContext(Bloque_objtContext.class,0);
		}
		public Bloque_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterBloque_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitBloque_vars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitBloque_vars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_varsContext bloque_vars() throws RecognitionException {
		Bloque_varsContext _localctx = new Bloque_varsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloque_vars);
		int _la;
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(ESTO);
				setState(69);
				match(ID);
				setState(70);
				match(DOS_PUNTOS);
				setState(71);
				tipos();
				setState(72);
				expresion(0);
				setState(73);
				match(PUNTO_COMA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(ESTO);
				setState(76);
				match(ID);
				setState(77);
				match(DOS_PUNTOS);
				setState(78);
				expresion(0);
				setState(79);
				match(PUNTO_COMA);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(SERIES);
				setState(82);
				match(ID);
				setState(83);
				match(LCORCH);
				setState(84);
				expresion(0);
				setState(85);
				match(RCORCH);
				setState(86);
				match(DOS_PUNTOS);
				setState(87);
				tipos_varios();
				setState(88);
				match(LLLAVE);
				setState(89);
				bloque_varios();
				setState(90);
				match(RLLAVE);
				setState(91);
				match(PUNTO_COMA);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				match(SERIES);
				setState(94);
				match(ID);
				setState(95);
				match(LCORCH);
				setState(96);
				expresion(0);
				setState(97);
				match(RCORCH);
				setState(98);
				match(DOS_PUNTOS);
				setState(99);
				tipos_varios();
				setState(100);
				match(PUNTO_COMA);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				match(ESTO);
				setState(103);
				match(ID);
				setState(104);
				match(DOS_PUNTOS);
				setState(105);
				match(ID);
				setState(106);
				match(LLLAVE);
				setState(107);
				bloque_varios();
				setState(108);
				match(RLLAVE);
				setState(109);
				match(PUNTO_COMA);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(111);
				match(ESTO);
				setState(112);
				match(ID);
				setState(113);
				match(DOS_PUNTOS);
				setState(114);
				match(NOVUS);
				setState(115);
				match(ID);
				setState(116);
				match(LPAREN);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 69806346129667696L) != 0)) {
					{
					setState(117);
					bloque_objt();
					}
				}

				setState(120);
				match(RPAREN);
				setState(121);
				match(PUNTO_COMA);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(122);
				match(SERIES);
				setState(123);
				match(ID);
				setState(124);
				match(LCORCH);
				setState(125);
				expresion(0);
				setState(126);
				match(RCORCH);
				setState(127);
				match(DOS_PUNTOS);
				setState(128);
				match(ID);
				setState(129);
				match(PUNTO_COMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipos_variosContext extends ParserRuleContext {
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public TerminalNode ID() { return getToken(PigLatinParserParser.ID, 0); }
		public Tipos_variosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipos_varios; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterTipos_varios(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitTipos_varios(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitTipos_varios(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipos_variosContext tipos_varios() throws RecognitionException {
		Tipos_variosContext _localctx = new Tipos_variosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipos_varios);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case NUMERUS:
			case TEXTUM:
			case DECIMALIS:
			case LITTERA:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				tipos();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_variosContext extends ParserRuleContext {
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> LLLAVE() { return getTokens(PigLatinParserParser.LLLAVE); }
		public TerminalNode LLLAVE(int i) {
			return getToken(PigLatinParserParser.LLLAVE, i);
		}
		public List<Bloque_variosContext> bloque_varios() {
			return getRuleContexts(Bloque_variosContext.class);
		}
		public Bloque_variosContext bloque_varios(int i) {
			return getRuleContext(Bloque_variosContext.class,i);
		}
		public List<TerminalNode> RLLAVE() { return getTokens(PigLatinParserParser.RLLAVE); }
		public TerminalNode RLLAVE(int i) {
			return getToken(PigLatinParserParser.RLLAVE, i);
		}
		public List<TerminalNode> COMA() { return getTokens(PigLatinParserParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(PigLatinParserParser.COMA, i);
		}
		public Bloque_variosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_varios; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterBloque_varios(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitBloque_varios(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitBloque_varios(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_variosContext bloque_varios() throws RecognitionException {
		Bloque_variosContext _localctx = new Bloque_variosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bloque_varios);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case NUMERUS:
			case TEXTUM:
			case DECIMALIS:
			case LITTERA:
			case FALSUS:
			case VERUM:
			case NON:
			case LPAREN:
			case RESTA:
			case ID:
			case INT:
			case DOUBLE:
			case STRING:
			case CHARS:
				{
				setState(137);
				expresion(0);
				}
				break;
			case LLLAVE:
				{
				setState(138);
				match(LLLAVE);
				setState(139);
				bloque_varios();
				setState(140);
				match(RLLAVE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(144);
				match(COMA);
				setState(150);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BOOL:
				case NUMERUS:
				case TEXTUM:
				case DECIMALIS:
				case LITTERA:
				case FALSUS:
				case VERUM:
				case NON:
				case LPAREN:
				case RESTA:
				case ID:
				case INT:
				case DOUBLE:
				case STRING:
				case CHARS:
					{
					setState(145);
					expresion(0);
					}
					break;
				case LLLAVE:
					{
					setState(146);
					match(LLLAVE);
					setState(147);
					bloque_varios();
					setState(148);
					match(RLLAVE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_objtContext extends ParserRuleContext {
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> NOVUS() { return getTokens(PigLatinParserParser.NOVUS); }
		public TerminalNode NOVUS(int i) {
			return getToken(PigLatinParserParser.NOVUS, i);
		}
		public List<TerminalNode> ID() { return getTokens(PigLatinParserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PigLatinParserParser.ID, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(PigLatinParserParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(PigLatinParserParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(PigLatinParserParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(PigLatinParserParser.RPAREN, i);
		}
		public List<TerminalNode> COMA() { return getTokens(PigLatinParserParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(PigLatinParserParser.COMA, i);
		}
		public List<Bloque_objtContext> bloque_objt() {
			return getRuleContexts(Bloque_objtContext.class);
		}
		public Bloque_objtContext bloque_objt(int i) {
			return getRuleContext(Bloque_objtContext.class,i);
		}
		public Bloque_objtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_objt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).enterBloque_objt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinParserListener ) ((PigLatinParserListener)listener).exitBloque_objt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinParserVisitor ) return ((PigLatinParserVisitor<? extends T>)visitor).visitBloque_objt(this);
			else return visitor.visitChildren(this);
		}
	}
